@@ -1,2 +1,8 @@
 info_TEXINFOS = wol.texi
 MAINTAINERCLEANFILES = Makefile.in texinfo.tex
+
+wol.pdf: wol.ps
+	ps2pdf wol.ps
+
+clean-local:
+	rm -f wol.pdf
