@@ -3,7 +3,7 @@
  *
  *	create and assemble magic packets
  *
- *	$Id: magic.c,v 1.4 2002/02/13 08:27:44 wol Exp $
+ *	$Id: magic.c,v 1.5 2002/02/25 19:27:01 wol Exp $
  *
  *	Copyright (C) 2000-2002 Thomas Krennwallner <krennwallner@aon.at>
  *
@@ -19,8 +19,7 @@
  *
  *	You should have received a copy of the GNU General Public License
  *	along with this program; if not, write to the Free Software
- *	Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307,
- *	USA.
+ *	Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
  */
 
 
@@ -64,8 +63,8 @@
  *	 -----------------------------------------
  *	 optional SecureON (tm) password:
  *	 _________________________________________
- *  |PASS0 |PASS1 |PASS2 |PASS3 |PASS4 |PASS5 |
- *   -----------------------------------------
+ *	|PASS0 |PASS1 |PASS2 |PASS3 |PASS4 |PASS5 |
+ *	 -----------------------------------------
  */
 
 
@@ -92,17 +91,15 @@ struct magic *
 magic_create (int with_passwd)
 {
 	struct magic *mag;
-	size_t size;
 
 	mag = (struct magic *) xmalloc (sizeof (struct magic));
 
 	if (with_passwd)
-		size = sizeof (struct secureon);
+		mag->size = sizeof (struct secureon);
 	else
-		size = sizeof (struct packet);
+		mag->size = sizeof (struct packet);
 
-	mag->packet = (unsigned char *) xmalloc (size);
-	mag->size = size;
+	mag->packet = (unsigned char *) xmalloc (mag->size);
 
 	return mag;
 }
@@ -113,7 +110,7 @@ void
 magic_destroy (struct magic *m)
 {
 	XFREE ((void *) m->packet);
-  XFREE ((void *) m);
+	XFREE ((void *) m);
 }
 
 
@@ -125,7 +122,8 @@ magic_assemble (struct magic *magic_buf, const char *mac_str,
 	int m[MAC_LEN];
 	int j, k;
 
-  if (mac_str == NULL || magic_buf == NULL) return -1;
+
+	if (mac_str == NULL || magic_buf == NULL) return -1;
 
 	/* split the MAC address string into it's hex components */
 	if (sscanf (mac_str, "%2x:%2x:%2x:%2x:%2x:%2x",
@@ -135,10 +133,27 @@ magic_assemble (struct magic *magic_buf, const char *mac_str,
 			return -1;
 		}
 
+	/* accommodate the packet chunk's size to the packet type */
+	if (passwd_str && magic_buf->size != sizeof (struct secureon))
+		{
+			magic_buf->packet = \
+									(unsigned char *) xrealloc ((void *) magic_buf->packet,
+																							sizeof (struct secureon));
+			magic_buf->size = sizeof (struct secureon);
+		}
+	else if (passwd_str == NULL && magic_buf->size != sizeof (struct packet))
+		{
+			magic_buf->packet = \
+									(unsigned char *) xrealloc ((void *) magic_buf->packet,
+																							sizeof (struct packet));
+			magic_buf->size = sizeof (struct packet);
+		}
+
+
 	/* assemble magic packet header */
 	memset ((void *) magic_buf->packet, 0xff, MAGIC_HEADER);
 
-  /* and now the data */
+	/* and now the data */
 	for (j = 0; j < MAGIC_TIMES; j++)
 		{
 			for (k = 0; k < MAC_LEN; k++)
@@ -146,6 +161,7 @@ magic_assemble (struct magic *magic_buf, const char *mac_str,
 																							(unsigned char) m[k];
 		}
 
+	/* add the SecureON passwd */
 	if (passwd_str)
 		{
 			int s[MAGIC_SECUREON];
@@ -156,14 +172,6 @@ magic_assemble (struct magic *magic_buf, const char *mac_str,
 				{
 					errno = EINVAL;
 					return -1;
-				}
-
-			if (magic_buf->size != sizeof (struct secureon))
-				{
-					magic_buf->packet = \
-									(unsigned char *) xrealloc ((void *) magic_buf->packet,
-																							sizeof (struct secureon));
-					magic_buf->size = sizeof (struct secureon);
 				}
 
 			for (j = 0; j < MAGIC_SECUREON; j++)
