@@ -1,8 +1,9 @@
 [0.6.0]
 * wol-dhcpdconf reads mac and ip from dhcpd.conf file
 * can read macfiles from stdin
-* add SecureON (tm) support to magic packets (tm) and macfile
+* add SecureON(tm) support to magic packets(tm) and macfile
 * added french and italian translation
+* enhanced documentation
 [0.5.1]
 * fixed memory leak in option parsing
 * to simplify things default IP address is now 255.255.255.255
